# nextcloud-API

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  README.md  api_implementation.json  requirements.in  requirements.txt  setup.cfg  setup.py  test.sh
docs/source/: api_implementation.rst  examples.rst
examples/: files.py  user_management.py
src/nextcloud/: __init__.py  base.py  codes.py  compat.py  requester.py  response.py  session.py
src/nextcloud/api/: item_set.py  model.py  properties.py
src/nextcloud/api_wrappers/: __init__.py  activity.py  apps.py  capabilities.py  group.py  group_folders.py  notifications.py  share.py  sharee.py  systemtags.py  user.py  user_ldap.py  webdav.py  webdav_trash.py
src/nextcloud/common/: build_xml.py  collections.py  paths.py  properties.py  simplexml.py  value_parsing.py
tests/: .env  Dockerfile.test  README.md  __init__.py  base.py  docker-compose.test.yml  docker-compose.yml  test_activities.py  test_apps.py  test_base.py  test_capabilities.py  test_group_folders.py  test_groups.py  test_ldap.py  test_notifications.py  test_requester.py  test_sharees.py  test_shares.py  test_systemtags.py  test_users.py  test_webdav.py
