[metadata]

name = nextcloud-api-wrapper
version = 0.2.3
description= Python wrapper for NextCloud api
long_description = file: README.rst
keywords = requests, api, wrapper, nextcloud, owncloud
license = GPLv3

# url = https://nextcloud-api.readthedocs.io
Source = https://github.com/luffah/nextcloud-API
project_urls = 
#    Documentation = https://nextcloud-api.readthedocs.io
    Source = https://github.com/luffah/nextcloud-API

# author = EnterpriseyIntranet
author = Luffah
author_email = luffah@runbox.com

platforms = any

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True

install_requires =
    requests >=2.0.1, <3.0
    six

[options.extras_require]
tests =
    pytest >= 5.2

#[tool:pytest]
#addopts = --verbose --pylint-rcfile=setup.cfg
# --pylint --pycodestyle

[pycodestyle]
max-line-length=120
ignore=E4,E7,W3

# Configuration for pylint
[MASTER]
ignore=CVS
good-names=logger,e,i,j,n,m,f,_

[MESSAGES CONTROL]
disable=all
enable=unused-import,
       fixme,
       useless-object-inheritance,
       unused-variable,
       unused-argument,
       unexpected-keyword-arg,
       string,
       unreachable,
       invalid-name,
       logging-not-lazy,
       unnecesary-pass
